<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/para3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/AboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textColor="#FD4FA0"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="176dp"
        android:layout_height="82dp"
        app:srcCompat="@drawable/ara"
        tools:layout_editor_absoluteX="-13dp"
        tools:layout_editor_absoluteY="474dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="98dp"
        app:srcCompat="@drawable/d"
        tools:layout_editor_absoluteX="-14dp"
        tools:layout_editor_absoluteY="300dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="268dp"
        android:layout_height="90dp"
        app:srcCompat="@drawable/h"
        tools:layout_editor_absoluteX="-58dp"
        tools:layout_editor_absoluteY="131dp" />

    <TextView
        android:id="@+id/para1"
        android:layout_width="109dp"
        android:layout_height="101dp"
        android:background="#FFFFFF"
        android:text="Her interest in the fields of Hair and Beauty has prompted an invitation from the Skills Development Authority to serve on the panel to set up standards for Hair and Beauty. "
        android:textSize="10"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="131dp" />

    <TextView
        android:id="@+id/para"
        android:layout_width="109dp"
        android:layout_height="94dp"
        android:text="@string/Artist2"
        android:textColor="#B71C1C"
        android:textSize="10"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="304dp" />

    <TextView
        android:id="@+id/para2"
        android:layout_width="110dp"
        android:layout_height="83dp"
        android:text="@string/Artist3"
        android:textColor="#880E4F"
        android:textSize="10"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="473dp" />

    <TextView
        android:id="@+id/para4"
        android:layout_width="108dp"
        android:layout_height="431dp"
        android:background="#70631B42"
        android:text="@string/note"
        android:textColor="#FDFCFC"
        tools:layout_editor_absoluteX="287dp"
        tools:layout_editor_absoluteY="131dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="104dp"
        android:layout_height="52dp"
        app:srcCompat="@drawable/fb"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="614dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="78dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/utube"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="614dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="127dp"
        android:layout_height="52dp"
        app:srcCompat="@drawable/tw"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="614dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="67dp"
        android:layout_height="44dp"
        app:srcCompat="@drawable/insta"
        tools:layout_editor_absoluteX="306dp"
        tools:layout_editor_absoluteY="620dp" />

    <TextView
        android:id="@+id/find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/findus"
        android:textColor="#1A237E"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="580dp" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="70dp"
        android:layout_height="65dp"
        app:srcCompat="@drawable/tran"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="7dp" />

</androidx.constraintlayout.widget.ConstraintLayout>